# toy-lang

./: Cargo.toml  README.md  justfile
.github/workflows/: coverage.yaml  workflow.yaml
examples/: and.toy  assignment.toy  blocks.toy  functions.toy  if.toy  loops.toy  numbers.toy
src/: error.rs  main.rs
src/interpreter/: chunk.rs  compiler.rs  function.rs  machine.rs  mod.rs  op.rs  rle.rs  value.rs
src/machine/: chunk.rs  compiler.rs  mod.rs  rle.rs  value.rs
src/syntax/: ast.rs  lex.rs  parse.rs
