[package]
name = "toy-lang"
description = "A toy programming language"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
logos = { version = "0.15.0" }
thiserror = "2.0.12"
miette = { version = "7.5.0", features = ["fancy"] }

[dev-dependencies]
rstest = "0.25.0"
