[package]
name = "toy-lang"
description = "A toy programming language"
version = "0.1.0"
edition = "2024"

[dependencies]
# For cli
clap = { version = "4.5.34", features = ["derive"] }

# For syntax
logos = { version = "0.15.0" } 

# For error handling and formatting
thiserror = "2.0.12" 
miette = { version = "7.5.0", features = ["fancy"] }
rustyline = "15.0.0"

[dev-dependencies]
rstest = "0.25.0"
